rough post status change system
