# openapi.json
@@ -149,6 +149,39 @@
         ]
       }
     },
+    "/posts/status/{id}": {
+      "patch": {
+        "operationId": "PostController_changeStatus",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChangeStatusPostDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Post"
+        ]
+      }
+    },
     "/posts/{postId}/tags/{tagId}": {
       "post": {
         "operationId": "PostController_AddTag",
@@ -429,6 +462,10 @@
     },
     "schemas": {
       "LoginDto": {
+        "type": "object",
+        "properties": {}
+      },
+      "ChangeStatusPostDto": {
         "type": "object",
         "properties": {}
       },
