# src/modules/posts/application/dtos/change-status-post.dot.ts
@@ -1,0 +1,3 @@
+export class ChangeStatusPostDto {
+  status?: string;
+}
